<resources>
    <string name="app_name">Dicoding MADE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_movie_tv_show_poster_description">Poster Movie or TV Show</string>
    <string name="title_movie_tv_show_description">Title Movie or TV Show</string>
    <string name="movie_tv_show_release_date_description">Movie or TV Show Release Date</string>
    <string name="movie_tv_show_overview_description">Movie or TV Show Overview</string>
    <string name="title_movie_tv_show">Title Movie or TV Show</string>
    <string name="movie_tv_show_release_date">Release Date</string>
    <string name="lorem">lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
        dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet.\nlorem ipsum dolor sit amet lorem ipsum
        dolor sit amet lorem ipsum dolor sit amet. lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
        dolor sit amet lorem ipsum
        dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet.\nlorem ipsum dolor sit amet lorem ipsum
        dolor sit amet lorem ipsum dolor sit amet. lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
        dolor sit amet lorem ipsum
        dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet.\nlorem ipsum dolor sit amet lorem ipsum
        dolor sit amet lorem ipsum dolor sit amet.
    </string>
    <string name="overview">Overview</string>
    <string name="choose_language_menu">Choose Language</string>
    <string name="title_tab_movie">Movies</string>
    <string name="title_tab_tv_show">TV Show</string>
    <string name="img_description">Image Description</string>
    <string-array name="title_tv_show_data">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Grey\'s Anatomy</item>
        <item>Hanna</item>
        <item>Marvel\'s Iron Fist</item>
        <item>Naruto Shippūden</item>
        <item>NCIS</item>
        <item>Riverdale</item>
        <item>Shameless</item>
        <item>Supergirl</item>
        <item>Supernatural</item>
        <item>The Simpsons</item>
        <item>The Umbrella Academy</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="tv_show_release_date_data">
        <item>Session 1 : October 10, 2012</item>
        <item>Session 1 : February 15, 2019</item>
        <item>Session 1 : February 25, 1986</item>
        <item>Session 1 : October 12, 2009</item>
        <item>Session 1 : January 31, 1999</item>
        <item>Session 1 : October 7, 2014</item>
        <item>Session 1 : April 17, 2011</item>
        <item>Session 1 : September 22, 2014</item>
        <item>Session 1 : March 27, 2005</item>
        <item>Session 1 : March 28, 2019</item>
        <item>Session 1 : March 17, 2017</item>
        <item>Session 1 : February 15, 2007</item>
        <item>Session 1 : September 22, 2003</item>
        <item>Session 1 : January 26, 2017</item>
        <item>Session 1 : January 9, 2011</item>
        <item>Session 1 : October 26, 2015</item>
        <item>Session 1 : September 13, 2005</item>
        <item>Session 1 : December 17, 1989</item>
        <item>Session 1 : February 15, 2019</item>
        <item>Session 1 : October 31, 2010</item>
    </string-array>
</resources>