<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="movie"
                type="c.dicodingmade.model.MovieResult"/>
    </data>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_item_movie_tv_show"
            app:cardCornerRadius="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="203dp"
                    app:srcCompat="@drawable/poster_spiderman"
                    app:imageUrl="@{movie.backdropPath}"
                    android:adjustViewBounds="true"
                    android:id="@+id/img_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:srcCompat="@drawable/poster_spiderman"
                    android:contentDescription="@string/img_movie_tv_show_poster_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:scaleType="centerCrop"
            />
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:srcCompat="@drawable/bg_gradient"
                    android:id="@+id/img_bg_transparent"
                    app:layout_constraintBottom_toBottomOf="@+id/img_poster"
                    tools:srcCompat="@drawable/bg_gradient"
                    android:contentDescription="@string/img_description"
                    app:layout_constraintTop_toTopOf="@+id/img_poster"
                    app:layout_constraintEnd_toEndOf="@+id/img_poster"
                    app:layout_constraintStart_toStartOf="@+id/img_poster"/>
            <TextView
                    android:text="@{movie.title}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title"
                    tools:text="@string/title_movie_tv_show"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:contentDescription="@string/title_movie_tv_show_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img_bg_transparent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_release_date"
                    app:layout_constraintVertical_bias="1.0"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    app:releaseDate="@{movie.releaseDate}"
                    android:text="@string/movie_tv_show_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_release_date"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp"
                    tools:text="@string/movie_tv_show_release_date"
                    android:contentDescription="@string/movie_tv_show_release_date_description"
                    app:layout_constraintTop_toTopOf="@+id/img_bg_transparent"
                    app:layout_constraintBottom_toBottomOf="@+id/img_bg_transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="#FFFFFF"
                    app:layout_constraintVertical_bias="1.0"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@{movie.overview}"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_description"
                    tools:text="@string/lorem"
                    android:lineSpacingExtra="0.5sp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:contentDescription="@string/movie_tv_show_overview_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_poster"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp" android:layout_marginStart="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>