<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_detail">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:titleTextColor="@android:color/black"
        />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:srcCompat="@drawable/poster_spiderman"
                    android:id="@+id/img_detail_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    tools:srcCompat="@drawable/poster_spiderman"
                    android:contentDescription="@string/img_movie_tv_show_poster_description"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:text="@string/title_movie_tv_show"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/img_detail_poster"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/title_movie_tv_show"
                    android:contentDescription="@string/title_movie_tv_show_description"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_release_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="@string/movie_tv_show_release_date"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/movie_tv_show_release_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/movie_tv_show_release_date_description"/>
            <TextView
                    android:text="@string/movie_tv_show_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_movie_release_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    tools:text="@string/movie_tv_show_release_date"
                    android:contentDescription="@string/movie_tv_show_release_date_description"/>
            <TextView
                    android:text="@string/overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_overview"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    tools:text="@string/overview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_release_date"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/movie_tv_show_overview_description"/>
            <TextView
                    android:text="@string/lorem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_movie_description"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="@string/lorem"
                    android:contentDescription="@string/movie_tv_show_overview_description"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>