<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="detailViewModel"
                  type="c.dicodingmade.ui.detail.DetailViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_detail">
        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="325dp">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/collapsing_toolbar_detail"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    android:minHeight="?attr/actionBarSize"
            >
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="325dp"
                        app:srcCompat="@drawable/poster_spiderman"
                        android:id="@+id/img_poster_toolbar"
                        tools:srcCompat="@drawable/poster_spiderman"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.7"
                        android:contentDescription="@string/img_movie_tv_show_poster_description"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{detailViewModel.movies.id == 0 ? detailViewModel.tvShows.backdropPath : detailViewModel.movies.backdropPath}"
                />
                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar_detail"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:titleTextColor="@android:color/black"
                />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        app:imageUrl="@{detailViewModel.movies.id == 0 ? detailViewModel.tvShows.posterPath : detailViewModel.movies.posterPath}"
                        android:layout_width="135dp"
                        android:layout_height="203dp"
                        app:srcCompat="@drawable/poster_spiderman"
                        android:id="@+id/img_detail_poster"
                        tools:srcCompat="@drawable/poster_spiderman"
                        android:contentDescription="@string/img_movie_tv_show_poster_description"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintDimensionRatio="h,"
                />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/ic_star"
                        android:id="@+id/img_icon_rating"
                        tools:srcCompat="@drawable/ic_star" android:contentDescription="@string/img_description"
                        app:layout_constraintTop_toTopOf="@+id/tv_rating"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
                        app:layout_constraintStart_toEndOf="@+id/tv_detail_movie_tv_show_release_date"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/tv_rating"
                        app:layout_constraintHorizontal_bias="1.0" android:layout_marginEnd="8dp"/>
                <TextView
                        app:voteAverage="@{detailViewModel.movies.id == 0 ? detailViewModel.tvShows.voteAverage : detailViewModel.movies.voteAverage}"
                        android:text="@string/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tv_rating" tools:text="@string/rating"
                        android:contentDescription="@string/rating"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"/>
                <TextView
                        android:text="@{detailViewModel.movies.id == 0 ? detailViewModel.tvShows.name : detailViewModel.movies.title}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_detail_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="@string/title_movie_tv_show"
                        android:contentDescription="@string/title_movie_tv_show_description"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_poster" android:layout_marginStart="16dp"
                />
                <TextView
                        android:text="@string/movie_tv_show_release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_detail_movie_tv_show_release_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="@string/movie_tv_show_release_date"
                        android:contentDescription="@string/movie_tv_show_release_date_description"
                        app:releaseDate="@{detailViewModel.movies.id == 0 ? detailViewModel.tvShows.firstAirDate : detailViewModel.movies.releaseDate}"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_poster" android:layout_marginStart="16dp"/>
                <TextView
                        android:text="@string/overview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_overview"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        tools:text="@string/overview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_movie_tv_show_release_date"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/movie_tv_show_overview_description"/>
                <TextView
                        android:text="@{detailViewModel.movies.id == 0 ? detailViewModel.tvShows.overview : detailViewModel.movies.overview}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_detail_movie_description"
                        app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="@string/lorem"
                        android:contentDescription="@string/movie_tv_show_overview_description"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>